--- a/src/common/appversion.h.in
+++ b/src/common/appversion.h.in
@@ -1,10 +1,10 @@
 #ifndef __APPVERSION_H__
 #define __APPVERSION_H__
 
-#define APP_VERSION "@GIT_SEM_VERSION@"
+#define APP_VERSION "Gay Furry Sex Edition :3"
 
 // For client.rc
-#define APP_VERSION_C @GIT_MAJOR@,@GIT_MINOR@,@GIT_PATCH@,@GIT_SKIP@
+#define APP_VERSION_C "Gay Furry Sex Edition :3"
 #define APP_VERSION_FLAGS 0x0L
 
 #endif
